src/assets/scss/templates/_page-home.scss
%svg-shape {
  fill: $white;
  position: absolute;
}

.page-home {
  transform: translateZ(0); // hardware accelerate background-color change on scroll

  &__screen-block--welcome {
    .entrance {
      transition: opacity 0.8s ease-in-out;
      transition-delay: 1.2s;
      opacity: 0;
      &.show {
        opacity: 1;
      }
    }

    &__headline-background-image {
      position: absolute;
      margin: auto;
      left: 0;
      right: 0;
      top: 0;
      bottom: 0;
      width: 45%;
      // FIXME: this should be 280px, but we have shedloads of transparent pixels around the image :(
      min-width: 220px;
      transition: opacity 0.8s ease-in-out;
      backface-visibility: hidden;
      transform: translateZ(0) scale(2.0, 2.0);
      opacity: 1;

      &.add {
        opacity: 0;
      }
      &.show {
        opacity: 1;
      }
      &.hide {
        opacity: 0;
      }
    }

    &__header-vertical-centerer {
      @include vertically-centering-parent(80vh);
      width: 100%;
      margin-top: 5vh;
      &__bold-header {
        @include vertically-centred-element;
        position: relative;
        h1 {
          max-width: 11em;
          margin: auto;
        }
      }
    }

    &__down-chevron {
      position: absolute;
      left: 0;
      right: 0;
      bottom: 40px;
      margin: 0 auto;
    }

    @include susy-breakpoint($bp-large, $susy) {
      @include container(16);
      @include nested(16) {
        background: none;
      }
    }
  }

  &__screen-block--client {
    &__image-vertical-centerer-parent {
      &__image-vertical-centerer-child {
        &__image-margin-container {
          position: relative;
          &__harvey-nicks-shape-3 {
            @extend %svg-shape;
            top: 58%;
            left: 10%;
            width: 15%;
            height: 18%;
          }

          &__harvey-nicks-shape-4 {
            @extend %svg-shape;
            top: 20%;
            right: 23%;
            width: 15%;
            height: 18%;
          }

          &__harvey-nicks-device {
            margin: 7% 10% 9% 6%;
            width: span(84%);
            position: relative;
          }

          &__harvey-nicks-shape-1 {
            @extend %svg-shape;
            top: 0;
            left: 10%;
            width: 15%;
            height: 18%;
          }

          &__harvey-nicks-shape-2 {
            @extend %svg-shape;
            top: 63%;
            right: 6%;
            width: 15%;
            height: 15%;
          }
        }
      }
    }

    &__text-block-vertical-centerer {
      @include span(87.5%);
      @include squish(6.25%);
    }

    @include susy-breakpoint($bp-medium, $susy) {
      @include nested(8) {
        &__image-vertical-centerer-parent {
          @include span(6 first);
          @include squish(1);
        }
        &__text-block-vertical-centerer {
          @include span(8 nest last) {
            .home-text-block {
              >* {
                @include squish(1);
                width: span(6);
              }
            }
          }
        }
      }
    }

    @include susy-breakpoint($bp-large, $susy) {
      @include nested(16) {
        &__image-vertical-centerer-parent {
          @include span(9 first);
          margin-left: 0;
          @include vertically-centering-parent(90vh);
          &__image-vertical-centerer-child {
            @include vertically-centred-element;
          }
        }
        &__text-block-vertical-centerer {
          margin-left: 0;
          @include vertically-centering-parent(90vh);
          @include span(7 nest last) {
            .home-text-block {
              @include vertically-centred-element;
              >* {
                @include squish(1);
                width: span(5);
              }
            }
          }
        }
      }
    }
  }

  &__screen-block--own-stuff {
    &__image-vertical-centerer-parent {
      margin: 0 6.25%;
      @include span(87.5%);
      &__image-vertical-centerer-child {
        &__image-layer {
          position: relative;
          text-align: center;
          &__monument-award-1 {
            @extend %svg-shape;
            top: 0%;
            left: 23%;
            width: 27%;
            height: 16%;
          }
          &__monument-award-2 {
            @extend %svg-shape;
            top: 12%;
            left: 11%;
            width: 27%;
            height: 16%;
          }
          &__monument-award-3 {
            @extend %svg-shape;
            top: 24%;
            left: -2%;
            width: 27%;
            height: 16%;
          }
          &__monument-device {
            width: 95%;
            position: relative;
            margin: 10% 0;
          }
        }
      }
    }

    &__text-block-vertical-centerer {
      @include span(87.5%);
      @include squish(6.25%);
    }

    @include susy-breakpoint($bp-medium, $susy) {
      @include nested(8) {
        &__text-block-vertical-centerer {
          @include span(8 nest last) {
            .home-text-block {
              >* {
                @include squish(1);
                width: span(6);
              }
            }
          }
        }
        &__image-vertical-centerer-parent {
          @include span(6 first);
          @include squish(1);
        }
      }
    }

    @include susy-breakpoint($bp-large, $susy) {
      @include nested(16) {
        &__text-block-vertical-centerer {
          margin-left: 0;
          @include vertically-centering-parent(90vh);
          @include span(6 nest first) {
            .home-text-block {
              @include vertically-centred-element;
              >* {
                @include pre(1);
                width: span(5);
              }
            }
          }
        }

        &__image-vertical-centerer-parent {
          @include span(10 last);
          @include vertically-centering-parent(90vh);
          margin: 0 -7% 0 0;
          &__image-vertical-centerer-child {
            @include vertically-centred-element;
          }
        }
      }
    }
  }

  &__screen-block--ventures {
    &__image-vertical-centerer-parent {
      &__image-vertical-centerer-child {
        &__image-layer {
          position: relative;
          &__dice-screen-anim {
            position: absolute;
            width: 27.8%;
            right: 21%;
            top: 0px;
            bottom: 4.5%;
            margin: auto;

            @include susy-breakpoint($bp-large, $susy) {
              width: 34.8%;
              right: 11%;
            }
          }
          &__dice-device {
            position: relative;
            width: 100%;
            margin: 0;


            @include susy-breakpoint($bp-large, $susy) {
              margin: 0 -10%;
              width: 125%;
            }
          }
          &__dice-logo {
            @extend %svg-shape;
            top: -2%;
            left: 64%;
            width: 24%;
            height: 24%;
          }
        }
      }
    }

    &__text-block-vertical-centerer {
      @include span(87.5%);
      @include squish(6.25%);
    }

    @include susy-breakpoint($bp-medium, $susy) {
      @include nested(8) {
        &__image-vertical-centerer-parent {
          @include span(6 first);
          @include squish(1);
          &__image-vertical-centerer-child {
            &__image-layer {
              &__dice-screen-anim {
                width: 27.7%;
                right: 20.9%;
              }
              &__dice-device {
                width: 100%;
                margin: auto;
              }
            }
          }
        }
        &__text-block-vertical-centerer {
          @include span(8 nest last) {
            .home-text-block {
              >* {
                @include squish(1);
                width: span(6);
              }
            }
          }
        }
      }
    }

    @include susy-breakpoint($bp-large, $susy) {
      @include nested(16) {
        &__image-vertical-centerer-parent {
          @include span(9 first);
          @include vertically-centering-parent(90vh);
          margin-left: 0;
          &__image-vertical-centerer-child {
            @include vertically-centred-element;
          }
        }
        &__text-block-vertical-centerer {
          position: relative;
          margin-left: 0;
          @include vertically-centering-parent(90vh);
          @include span(7 nest last) {
            .home-text-block {
              @include vertically-centred-element;
              >* {
                @include squish(1);
                width: span(5);
              }
            }
          }
        }
      }
    }
  }
}

